# Virtuosity-Detector

./: .gitignore  Readme.md  config_example.yaml  pyproject.toml  requirements.txt
data/processed/: example_annotation_trills.csv
data/raw/: example_data_morpho.csv  example_segments_passerines_filtered.csv  example_traits_data_pc_gmm_8components_proba_filtered.csv
src/: config.py  main.py
src/tools/: csv_cleaner.ipynb  metric_tests.ipynb  podos_bandwidth_comparison .ipynb  segments_manipulation.ipynb  virtuosity_main.py
src/utils/: annotate.py  boxplot_viewer.py  counting.py  gui_visualizer.py  metrics.py  segmentation.py  spectrograms.py
src/yolo/: build_yolo_dataset.py  colab_training_script.ipynb  prepare_yolo.py  yolo_training.py
